# run-planner

./: Dockerfile  compose.yml  package-lock.json
.github/workflows/: python-app.yml
backend/: Dockerfile  calcs.py  main.py  models.py  pyproject.toml  routers.py
backend/alembic/: env.py
backend/alembic/versions/: 9ebdb636e52b_create_initial_tables.py
backend/api/: calcs.py  models.py  routers.py  schemas.py
backend/api/core/: config.py  database.py
backend/tests/: test_calcs.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.tsx
frontend/src/components/: Calculator.tsx  PaceTable.tsx  TabPanel.tsx  Workouts.tsx
frontend/src/styles/: theme.ts
frontend/src/utils/: inputValidation.tsx
src/: calcs.py  main.py  models.py  routers.py
