[project]
name = "run-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.6",
    "greenlet>=3.1.1",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.37",
    "sqlmodel>=0.0.22",
]
